<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnToStep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step1" />

        <Button
            android:id="@+id/btnToStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step2" />

        <Button
            android:id="@+id/btnToStep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3" />

        <Button
            android:id="@+id/btnToStep4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step4" />

        <Button
            android:id="@+id/btnToStep5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step5" />

        <Button
            android:id="@+id/btnToAdditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step6" />
    </LinearLayout>
</ScrollView>