<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSubmitBlack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:background="@android:color/black"
        android:text="@string/txt_color_black"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnSubmitRed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/colorRed"
        android:text="@string/txt_color_red"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnSubmitGreen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/colorGreen"
        android:text="@string/txt_color_green"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnSubmitBlue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/colorBlue"
        android:text="@string/txt_color_blue"
        android:textColor="@android:color/white" />
</LinearLayout>