<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_color_red"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="255" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_color_green"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="128" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_color_blue"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etValRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/txt_color_red"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etValGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/txt_color_green"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etValBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/txt_color_blue"
            android:inputType="number"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCheckColor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@android:color/transparent"
        android:padding="@dimen/button_margin"
        android:text="@string/check_color" />

    <Button
        android:id="@+id/btnSubmitColor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/submit" />
</LinearLayout>